tests/invalid/function_kwargs_unsupported/main.py
def f(**kwargs: int) -> int:
    return 0

if __name__ == "__main__":
    y: int = f(a=1)
